# diam

./: Cargo.toml  TODO
examples/: log.rs  log_reduce.rs  scan.rs
src/: lib.rs  prelude.rs
src/adaptors/: adaptive.rs  blocks.rs  left.rs  log.rs  mod.rs  scan.rs  split_map.rs  tuples.rs  walk_tree.rs
